--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 
 * {
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .page {
@@ -30,6 +31,40 @@ body {
 .library {
     grid-column: 1 / 4;
     grid-row: 1/2;
+    border: 1px solid black;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+
+
+.library-book {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  border: 1px solid black;
+  background-color: lightgreen;
+  width: 300px;
+  height: 250px;
+}
+
+.library-book > button {
+  width: 80%;
+  height: 40px;
+  border: none;
+}
+
+.library-book > button:hover {
+  background-color: lightseagreen;
+}
+
+.title, .author, .pageNo, .read, .delete {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .bottom {
