--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,24 @@
+:root {
+  --header-color: #363E24;
+  --text-color: #E3DDC5;
+  --card-color: #626945;
+  --card-text-color: #E3DDC5;
+  --main-bg-color: #CEA452;
+}
+
 body {
     margin: 0;
+    background-color: var(--main-bg-color);
+}
+
+@font-face {
+  font-family: "retroFont";
+  src: url("fonts/Capuche Trial.otf");
 }
 
 * {
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif */
 }
 
 .page {
@@ -15,9 +29,21 @@ body {
 }
 
 .header {
-    background-color: lightblue;
+    display: flex;
+    background-color: var(--header-color);
     width: 100%;
     height: 10%;
+    padding-left: 50px;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.header > h1 {
+  color: var(--text-color);
+  font-family: "retroFont";
+  font-size: 55px;
+  margin: 0px;
 }
 
 .content {
@@ -28,14 +54,35 @@ body {
     grid-template-rows: 8fr 1fr;
 }
 
+.temp-pop-up {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--text-color);
+  font-family: "retroFont";
+  /* left: 20%; */
+  width: 100%;
+  height: 100%;
+  position: fixed;
+}
+
+.temp-pop-up > h1 {
+  font-size: 70px;
+}
+
+.temp-pop-up > h2 {
+  font-size: 50px;
+}
+
 .library {
     grid-column: 1 / 4;
     grid-row: 1/2;
-    border: 1px solid black;
     padding: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+    grid-template-columns: repeat(auto-fill, minmax(300px, 4fr));
     gap: 20px;
+    font-family: monospace;
 }
 
 
@@ -46,25 +93,34 @@ body {
   align-items: center;
   justify-content: space-evenly;
   text-align: center;
-  border: 1px solid black;
-  background-color: lightgreen;
+  background-color: var(--card-color);
   width: 300px;
   height: 250px;
 }
 
 .library-book > button {
-  width: 80%;
+  width: 60%;
   height: 40px;
   border: none;
 }
 
-.library-book > button:hover {
-  background-color: lightseagreen;
+.read:hover {
+  background-color: rgb(145, 205, 202);
+}
+
+.delete:hover {
+  background-color: lightcoral;
 }
 
 .title, .author, .pageNo, .read, .delete {
-  font-size: 20px;
+  font-size: 26px;
   font-weight: bold;
+  color: var(--card-text-color)
+}
+
+.read, .delete {
+  color: var(--header-color);
+  font-family: monospace;
 }
 
 .bottom {
@@ -91,6 +147,11 @@ body {
     justify-content: center;
   }
 
+.open-button > h1 {
+  margin: 0;
+  height: 30px;
+  width: 30px;
+}
 
   /* The popup form - hidden by default */
 /* .form-popup {
@@ -101,44 +162,64 @@ body {
   border: 3px solid #f1f1f1;
   z-index: 9;
 } */
-
+.form-popup {
+  background-color: var(--card-color);
+  border: none;
+  color: var(--card-text-color);
+}
 /* Add styles to the form container */
 .form-container {
   max-width: 300px;
   padding: 10px;
-  background-color: white;
+  background-color: var(--card-color);
+}
+
+.form-container > label {
+  color: var(--card-text-color);
+  font-family: monospace;
+}
+
+.form-container > h1 {
+  font-family: "retroFont";
 }
 
 /* Full-width input fields */
-.form-container input[type=text], .form-container input[type=number] {
+.form-container input[type=text], .form-container input[type=number], #y-n {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
   background: #f1f1f1;
+  font-family: monospace;
+}
+
+#y-n {
+  font-family: monospace;
 }
 
 /* When the inputs get focus, do something */
-.form-container input[type=text]:focus, .form-container input[type=number]:focus {
+.form-container input[type=text]:focus, .form-container input[type=number]:focus, #y-n {
   background-color: #ddd;
   outline: none;
 }
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-  background-color: #04AA6D;
-  color: white;
+  background-color: #98f4d2;
+  color: var(--header-color);
   padding: 16px 20px;
   border: none;
   cursor: pointer;
   width: 100%;
   margin-bottom:10px;
   opacity: 0.8;
+  font-size: 16px;
+  font-family: monospace;
 }
 
 /* Add a red background color to the cancel button */
 .form-container .cancel {
-  background-color: red;
+  background-color: rgb(236, 172, 172);
 }
 
 /* Add some hover effects to buttons */
@@ -148,18 +229,11 @@ body {
 /* The popup form - hidden by default */
 .form-popup {
     display: block;
-    /* position: fixed; */
-    /* bottom: 0; */
-    /* right: 15px; */
-    border: 3px solid #f1f1f1;
+    border: 3px solid var(--card-text-color);
 }
   
 /* Add styles to the form container */
-.form-container {
-max-width: 300px;
-padding: 10px;
-background-color: white;
-}
+
 
 /* Full-width input fields */
 .form-container input[type=text], .form-container input[type=password], .form-container select {
@@ -177,7 +251,7 @@ outline: none;
 }
 
 /* Set a style for the submit/login button */
-.form-container .btn {
+/* .form-container .btn {
 background-color: #04AA6D;
 color: white;
 padding: 16px 20px;
@@ -186,12 +260,9 @@ cursor: pointer;
 width: 100%;
 margin-bottom:10px;
 opacity: 0.8;
-}
+} */
 
 /* Add a red background color to the cancel button */
-.form-container .cancel {
-background-color: red;
-}
 
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
